commenced db validations
