# docs/swagger.json
@@ -202,6 +202,10 @@
         },
         "notification-system_internal_notification_model.Notification": {
             "type": "object",
+            "required": [
+                "notification_id",
+                "user_id"
+            ],
             "properties": {
                 "channels": {
                     "description": "email, sms, etc.",
@@ -341,6 +345,9 @@
         },
         "notification-system_internal_userpreference_model.UserPreference": {
             "type": "object",
+            "required": [
+                "user_id"
+            ],
             "properties": {
                 "created_by_id": {
                     "type": "string"
